# configurable-neural-network

./: Activation.cpp  Activation.hpp  BenchmarkRunner.cpp  BenchmarkRunner.hpp  CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Configurable-Neural-Network-Showcase.html  Dataset.cpp  Dataset.hpp  Layer.cpp  Layer.hpp  Network.cpp  Network.hpp  Neuron.cpp  Neuron.hpp  README.md  large.txt  main.cpp  medium.txt
